--- a/app/templates/policy.html
+++ b/app/templates/policy.html
@@ -40,7 +40,7 @@
                                     <td>
                                     {% for source in rule['source'] %}
                                         {% if source[0] != 'Any' %}
-                                            <a href="/showobject/{{source[1]}}">{{ source[0] }}</a><br>
+                                            <a href="/showobject/{{source[1]}}" target="_blank">{{ source[0] }}</a><br>
                                         {% else %}
                                             {{ source[0] }}
                                         {% endif %}
@@ -49,7 +49,7 @@
                                     <td>
                                     {% for destination in rule['destination'] %}
                                         {% if destination[0] != 'Any' %}
-                                            <a href="/showobject/{{destination[1]}}">{{ destination[0] }}</a><br>
+                                            <a href="/showobject/{{destination[1]}}" target="_blank">{{ destination[0] }}</a><br>
                                         {% else %}
                                             {{ destination[0] }}
                                         {% endif %}
@@ -58,7 +58,7 @@
                                     <td>
                                     {% for service in rule['service'] %}
                                         {% if service[0] != 'Any' %}
-                                            <a href="/showobject/{{service[1]}}">{{ service[0] }}</a><br>
+                                            <a href="/showobject/{{service[1]}}" target="_blank">{{ service[0] }}</a><br>
                                         {% else %}
                                             {{ service[0] }}
                                         {% endif %}
@@ -69,7 +69,7 @@
                                     <td>
                                     {% for target in rule['target'] %}
                                         {% if target[0] != 'Policy Targets' %}
-                                            <a href="/showobject/{{target[1]}}">{{ target[0] }}</a><br>
+                                            <a href="/showobject/{{target[1]}}" target="_blank">{{ target[0] }}</a><br>
                                         {% else %}
                                             {{ target[0] }}
                                         {% endif %}
