Disabled rules and negated cells are opaqued in policy view.

--- a/app/static/styles/cpapi.css
+++ b/app/static/styles/cpapi.css
@@ -297,3 +297,12 @@ li a:hover {
 .showobject p {
     color: white;
 }
+
+.disabledrule {
+    opacity: 0.5;
+}
+
+.negatedcell {
+    background-color: #690019;
+    opacity:0.5;
+}
