--- a/app/templates/object.html
+++ b/app/templates/object.html
@@ -2,6 +2,7 @@
     <head>
         <link rel="stylesheet" type="text/css" href="{{ url_for('static',filename='styles/cpapi.css') }}?v=1.0.0">
         <link rel="shortcut icon" href="{{ url_for('static', filename='cpapi.ico') }}">
+        <script src="{{url_for('static', filename='js/object.js')}}"></script>
     </head>
         <body>
             {% block navbar %}
@@ -10,8 +11,8 @@
             <div class="content">
                 <div class="objectcontent">
                     <div class="addobjectform">
-                        <h1>Add Host</h1>
-                        <form action="" method="post" name="addhost">
+                        <h1 onclick="hidehost()">Add Host</h1>
+                        <form id="hostform" action="" method="post" name="addhost">
                             <label><b>Host Name</b></label>
                             <input type="text" name="hostname">
                             <label><b>IPv4 Address</b></label>
@@ -21,8 +22,8 @@
                     </div>
                     <br>
                     <div class="addobjectform">
-                        <h1>Add Network</h1>
-                        <form action="" method="post" name="addnet">
+                        <h1 onclick="hidenet()">Add Network</h1>
+                        <form id="netform" action="" method="post" name="addnet">
                             <label><b>Network Name</b></label>
                             <input type="text" name="netname">
                             <label><b>IPv4 Network</b></label>
@@ -34,8 +35,8 @@
                     </div>
                     <br>
                     <div class="addobjectform">
-                        <h1>Add Group</h1>
-                        <form action="" method="post" name="addgroup">
+                        <h1 onclick="hidegroup()">Add Group</h1>
+                        <form id="groupform" action="" method="post" name="addgroup">
                             <label><b>Group Name</b></label>
                             <input type="text" name="groupname">
                             <input type="submit" value="Submit">
