Fixed JS, seperate navbars for pre/post authentication.

--- a/app/templates/custom.html
+++ b/app/templates/custom.html
@@ -5,7 +5,7 @@
     </head>
         <body>
             {% block navbar %}
-            {{nav.mynavbar.render()}}
+            {{nav.postauth.render()}}
             {% endblock %}
             <div class="content">
                 <div class="customform">
