--- a/app/templates/object.html
+++ b/app/templates/object.html
@@ -2,11 +2,11 @@
     <head>
         <link rel="stylesheet" type="text/css" href="{{ url_for('static',filename='styles/cpapi.css') }}?v=1.0.0">
         <link rel="shortcut icon" href="{{ url_for('static', filename='cpapi.ico') }}">
-        <script src="{{url_for('static', filename='js/object.js')}}"></script>
+        <script src="{{url_for('static', filename='js/cpapi.js')}}"></script>
     </head>
         <body>
             {% block navbar %}
-            {{nav.mynavbar.render()}}
+            {{nav.postauth.render()}}
             {% endblock %}
             <div class="content">
                 <div class="objectcontent">
