--- a/app/templates/login.html
+++ b/app/templates/login.html
@@ -5,7 +5,7 @@
     </head>
         <body>
             {% block navbar %}
-            {{nav.mynavbar.render()}}
+            {{nav.preauth.render()}}
             {% endblock %}
             <div class="content">
                 <div class="header">
