--- a/app/static/styles/cpapi.css
+++ b/app/static/styles/cpapi.css
@@ -190,6 +190,32 @@ li a:hover {
     color: white;
 }
 
+.rulesearch {
+    width: 50%;
+    position: relative;
+    border-radius: 15px;
+    border: 2px solid #E65785;
+    padding: 20px;
+    margin-left: auto;
+    margin-right: auto;
+    background-color: #576372;
+}
+
+.rulesearch label {
+    text-align: left;
+    left: 100%;
+    color: white;
+}
+
+.rulesearch input[type=text] {
+    width: 100%;
+    padding: 12px 20px;
+    margin: 8px 0;
+    display: inline-block;
+    border: 1px solid #ccc;
+    box-sizing: border-box;
+}
+
 .ruletable {
     width: 100%;
     position: relative;
