Removed log lines from js, removed table id as we are now only getting tbody.

--- a/app/templates/policy.html
+++ b/app/templates/policy.html
@@ -32,7 +32,7 @@
                     </div>
                     <br>
                     <div class="ruletable">
-                        <table id="allruletable">
+                        <table>
                             <thead>
                                 <th>Number</th>
                                 <th>Name</th>
