--- a/app/templates/showobject.html
+++ b/app/templates/showobject.html
@@ -2,6 +2,7 @@
     <head>
         <link rel="stylesheet" type="text/css" href="{{ url_for('static',filename='styles/cpapi.css') }}?v=1.0.0">
         <link rel="shortcut icon" href="{{ url_for('static', filename='cpapi.ico') }}">
+        <script src="{{url_for('static', filename='js/cpapi.js')}}"></script>
     </head>
         <body>
             <div class="content">
